# sparkshield-carbench-agent

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  RELEASE_PROVENANCE.md  generate_compose.py  pyproject.toml
.github/workflows/: compliance.yml  option-c-smoke.yml  publish-ghcr.yml.disabled
docs/: ADR-001-compliance-boundary.md  a2a-introduction.md  agent-under-test-harnessing.md  architecture.md  cerebras-harness-patterns.md  development-guide.md
outputs/: plot_results.py
scenarios/: README.md
scenarios/track_1_agent_under_test/: ghcr_smoke.toml  ghcr_test_set.toml  local_docker_smoke.toml  local_docker_test_set.toml  local_smoke.toml  local_test_set.toml
scenarios/track_2_agent_under_test_cerebras/: ghcr_smoke.toml  ghcr_test_set.toml  local_docker_smoke.toml  local_docker_test_set.toml  local_smoke.toml  local_test_set.toml
scenarios/track_2_agent_under_test_cerebras_planner/: ghcr_smoke.toml  ghcr_test_set.toml  local_docker_smoke.toml  local_docker_test_set.toml  local_smoke.toml  local_test_set.toml
scripts/: check_agent_provider_profiles.py  check_production_image_inventory.py  check_runtime_compliance.py  setup_car_bench.sh  validate_submission.py
src/: logging_utils.py  tool_call_types.py  turn_metrics.py
src/agentbeats/: Dockerfile.a2a-client  __init__.py  client.py  client_cli.py  evaluator_executor.py  models.py  run_scenario.py  sync_client.py  tool_provider.py
src/evaluator/: Dockerfile.evaluator  car_bench_paths.py  (+2 more)
submission/: README.md  scenario.toml
tests/: test_a2a_response_contract.py  test_scenario_contract.py
(+129 files in other folders)
